 -- Handle the burst buffer state "alloc-revoke" which previously would not
    display in the job correctly.
 -- Fix issue in the slurmstepd SPANK prolog/epilog handler where configuration
    values were used before being initialized.
 -- Restore a step's ability to utilize all of an allocations memory if --mem=0.
 -- Fix --cpu-bind=verbose garbage taskid.

* Changes in Slurm 21.08.0
==========================
 -- Restored --gpu-bind=single:<ntasks> to check core affinity like
    --gpu-bind=closest does. This removal of this behavior only was in rc2.
 -- slurmd - Fix assert failure on initialization due to bad node name.
 -- Fix error codes in cgroup/v1.
 -- Don't destroy the memory step outside fini, which leads to a double destroy
    causing an error message.
 -- Add support for lua 5.4.
 -- Force cgroup.clone_children to 0 in slurm cgroup directories. This caused
    issues in task cpuset plugin in systems with it enabled by default.
 -- Clear GRES HAS_TYPE flag when removing type name.
 -- Environment flags in gres.conf now override flags set by AutoDetect.
 -- Environment flags in gres.conf now apply to subsequent gres.conf lines where
    Environment flags are not set.
 -- Set missing job_uid and job_gid members when preparing a kill_job_msg_t in
    abort_job_on_node(), abort_job_on_nodes() and kill_job_on_node().
 -- Fix swappiness not being set in cgroups.
 -- Fix coordinators for new subaccounts.
 -- Fix coordinators when adding existing users with PrivateData=users.
 -- slurmctld - do not attempt to relinquish control to self.
 -- openapi/v0.0.37 - Honor kill_on_invalid_dependency as job parameter.
 -- Check max_gres when doing step allocation, fix for regression in rc2.
 -- SPANK plugins are now required to match the current Slurm version, and must
    be recompiled for each new Slurm release.
 -- node_features/helpers - add ExecTime configuration option.
 -- srun - Fix force termination with -X.